[gd_scene load_steps=2 format=3 uid="uid://dmd2fvhp5wtm"]

[ext_resource type="Script" uid="uid://crlqq3wc3chsm" path="res://UI_elemenets/item_ui.gd" id="1_5vv03"]

[node name="item_ui" type="Control"]
layout_mode = 3
anchor_top = 0.576
anchor_right = 0.172
anchor_bottom = 1.0
offset_top = -0.248016
offset_right = -0.144012
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5vv03")

[node name="GridContainer" type="GridContainer" parent="."]
process_priority = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 0.644
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.100037
offset_right = 5.0
offset_bottom = -3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 0
columns = 2

[node name="TextureRect1" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 2

[node name="Label" type="Label" parent="GridContainer/TextureRect1"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.05
anchor_right = 0.35
anchor_bottom = 0.235
offset_bottom = -0.0300007
text = "Q"
horizontal_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="GridContainer/TextureRect2"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.071
anchor_right = 0.333
anchor_bottom = 0.235
offset_left = 0.0290003
offset_right = 0.0330009
offset_bottom = -0.0300007
text = "E"
horizontal_alignment = 1

[node name="DropTimer" type="Timer" parent="."]

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
